--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -1,20 +1,20 @@
 on:
   schedule:
     - cron: "*/10 * * * *" # Run every 10 minutes
+  workflow_dispatch: # Allow manual triggering
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-
       - name: Set up Go
         uses: actions/setup-go@v4
         with:
           go-version: "1.24.1"
-
       - name: Run HN Bot
         env:
           REDDIT_SECRET: ${{ secrets.REDDIT_SECRET }}
           REDDIT_PASSWORD: ${{ secrets.REDDIT_PASSWORD }}
-        run: go run . 10
+        run: |
+          go run . 10
