--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -16,5 +16,4 @@ jobs:
         env:
           REDDIT_SECRET: ${{ secrets.REDDIT_SECRET }}
           REDDIT_PASSWORD: ${{ secrets.REDDIT_PASSWORD }}
-        run: |
-          go run . 5
+        run: go run . 10
