--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -6,6 +6,9 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    concurrency:
+      group: ${{ github.workflow }}
+      cancel-in-progress: true
     steps:
       - uses: actions/checkout@v4
       - name: Set up Go
